--- a/index.html
+++ b/index.html
@@ -8,10 +8,42 @@
       height: 100%;
       padding: 0;
       margin: 0;
+      background-color: #f5f5f5;
+    }
+
+    .friend {
+      margin: 10px;
+      transition: top 1s ease, left 1s ease;
+      border-radius: 100%;
+      width: 80px;
+      height: 80px;
+      background-color: grey;
+      position: absolute;
+      text-align: center;
+      font-family: monospace;
+      line-height: 80px;
+      font-weight: bold;
+      background-size: 80px;
+    }
+
+    #me {
+      background-color: green;
+    }
+
+    #network {
+      position: absolute;
+      top: 50px;
+      bottom: 50px;
+      left: 50px;
+      right: 50px;
     }
   </style>
 </head>
 <body>
+<div id="network">
+<div class="friend" id="me"></div>
+</div>
+
 <div id="status">Drop some files</div>
 <script>
   require('./')
